--- a/index.html
+++ b/index.html
@@ -3,26 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Warsztaty 9 pazdziernika</title>
-    <link rel="stylesheet" href="css/style.css">
+    <!--<link rel="stylesheet" href="css/style.css">-->
+    <link rel="stylesheet" href="css/scss/style2.css">
+
+
+    <script src="js/jquery-2.1.4.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
-<div>
-
-<div class="content">
 
     <nav>
-        <ul>
-            <li class="logo">Sit <span class="green">on</span> chair</li>
-            <li class="links"><a href="#">Kontakt</a></li>
-            <li class="links"><a href="#">Galeria</a></li>
-            <li class="links"><a href="#">O firmie</a></li>
-        </ul>
+        <div class="content">
+            <ul>
+                <li class="logo">Sit <span class="green">on</span> chair</li>
+                <li class="links"><a href="#">Kontakt</a></li>
+                <li class="links"><a href="#">Galeria</a></li>
+                <li class="links"><a href="#">O firmie</a></li>
+            </ul>
+        </div>
     </nav>
 
     <div class="clear"></div>
 
-<!-- tu będzie sticky menu
-    <div class="stickyMenu">
+<!-- tu będzie tooltip
+    <div class="tooltip">
         <ul>
             <li>Aktualności</li>
             <li>Nasz team</li>
@@ -33,108 +37,153 @@
     -->
 
     <div class="jumbotron">
-        <figure class="bchair">
-            <img src="images/black_chair.png"/>
-        </figure>
+        <div class="content">
+            <img class="arrowLeft" src="images/left216.png"/>
 
-        <article class="main_description">
-                 <h1>Sit <span class="green">on </span> our <span class="green">chair</span></h1>
-                 <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. </p>
-                 <p class="main_more"><a href="#">Zobacz więcej</a></p>
-        </article>
+            <ul>
+                <li>
+                    <figure class="bchair">
+                    <img src="images/black_chair.png"/>
+                    </figure>
 
-        <img class="arrowLeft" src="images/left216.png"/>
-        <img class="arrowRight" src="images/keyboard53.png"/>
+                    <article class="main_description">
+                        <h1>Sit <span class="green">on </span> our <span class="green">chair</span></h1>
+                        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabituret                        ligula. Ut molestie a, ultricies porta urna. </p>
+                        <p class="main_more"><a href="#">Zobacz więcej</a></p>
+                    </article>
+                </li>
+
+                <li>
+                    <figure class="bchair">
+                    <img src="images/orange.png"/>
+                    </figure>
+
+                    <article class="main_description">
+                        <h1>Sit <span class="green">on </span> our <span class="green">chair</span></h1>
+                        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur                          et ligula. Ut molestie a, ultricies porta urna. </p>
+                        <p class="main_more"><a href="#">Zobacz więcej</a></p>
+                    </article>
+
+                </li>
+
+                <li>
+                    <figure class="bchair">
+                    <img src="images/red.png"/>
+                    </figure>
+
+                    <article class="main_description">
+                        <h1>Sit <span class="green">on </span> our <span class="green">chair</span></h1>
+                        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur                          et ligula. Ut molestie a, ultricies porta urna. </p>
+                        <p class="main_more"><a href="#">Zobacz więcej</a></p>
+                    </article>
+                </li>
+            </ul>
+
+             <img class="arrowRight" src="images/keyboard53.png"/>
+
+        </div>
     </div>
 
     <div class="clear"></div>
 
     <div class="examples">
-        <article>
-            <img src="images/box1_img.jpg"/>
-            <div class="examples_description">
-                <h3 class="examples_title">Chair CLAIR</h3>
-            </div>
-        </article>
+        <div class="content">
 
-        <article>
-            <img src="images/box2_img.jpg"/>
-            <div class="examples_description">
-            <h3 class="examples_title">Chair MARGARITA</h3>
+            <article class="examples_pictures">
+                <img class="picture_chair" data-order="0" src="images/box1_img.jpg"/>
+                <div class="examples_description">
+                    <h3 class="examples_title">Chair CLAIR</h3>
                 </div>
-        </article>
+            </article>
 
-        <article class="examples_more">
-            <h3 class="examples_title">Finds all inputs</h3>
-            <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. </p>
-            <p>Ut molestie a, ultricies porta urna.</p>
-        </article>
+            <article class="examples_pictures">
+                <img class="picture_chair" data-order="1" src="images/box2_img.jpg"/>
+                <div class="examples_description">
+                    <h3 class="examples_title">Chair MARGARITA</h3>
+                </div>
+            </article>
+
+            <article class="examples_more">
+                <h3 class="examples_title">Finds all inputs</h3>
+                <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et                       ligula. Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies.                               Curabitur et ligula. Ut molestie a, ultricies porta urna. </p>
+                <p>Ut molestie a, ultricies porta urna.</p>
+            </article>
+
+
+        </div>
+
     </div>
+
 
     <div class="clear"></div>
 
     <div class="pricelist">
 
-        <div class="pricelist_title">
-            <h2>Cennik</h2>
-        </div>
+        <div class="content">
 
-        <div class="pricelist_plans">
-
-            <div class="pricelist_outer_circles">
-                <p></p>
-                <p class = pricelist_type2></p>
-                <p></p>
+            <div class="pricelist_title">
+                <h2>Cennik</h2>
             </div>
 
-            <div class="pricelist_circles">
-                <p></p>
-                <p class="pricelist_type2"></p>
-                <p></p>
+            <div class="pricelist_plans">
+
+                <div class="pricelist_outer_circles">
+                    <p></p>
+                    <p class = pricelist_type2></p>
+                    <p></p>
+                </div>
+
+                <div class="pricelist_circles">
+                    <p></p>
+                    <p class="pricelist_type2"></p>
+                    <p></p>
+                </div>
+
+
+                <article class="pricelist_type1">
+                    <h2>basic plan</h2>
+                    <p class="pricelist_prices">85<sup>99</sup><br><span>pln/msc</span></p>
+                    <ul>
+                        <li>Zakup towaru + dowóz</li>
+                        <li>Serwis</li>
+                    </ul>
+
+                </article>
+
+
+                <article class="pricelist_type2">
+                    <h2>standard plan</h2>
+                    <p class="pricelist_prices_type2">95<sup>99</sup><br><span>pln/msc</span></p>
+                    <ul>
+                        <li>Zakup towaru + dowóz</li>
+                        <li>Serwis</li>
+                        <li>Gwarancja 5 lat</li>
+                    </ul>
+                </article>
+
+                <article class="pricelist_type1">
+                    <h2>advance plan</h2>
+                    <p class="pricelist_prices">211<sup>00</sup><br><span>pln/msc</span></p>
+                    <ul>
+                        <li>Zakup towaru + dowóz</li>
+                        <li>Serwis</li>
+                        <li>Gwarancja 5 lat</li>
+                        <li>Porady projektanta</li>
+                    </ul>
+                </article>
+
+                <div>
+                    <a href="#">Dołącz</a>
+                    <a class="pricelist_type2" href="#">Dołącz</a>
+                    <a href="#">Dołącz</a>
+                </div>
+
+
             </div>
 
 
-            <article class="pricelist_type1">
-            <h2>basic plan</h2>
-                <p class="pricelist_prices">85<sup>99</sup><br><span>pln/msc</span></p>
-            <ul>
-                <li>Zakup towaru + dowóz</li>
-                <li>Serwis</li>
-            </ul>
-
-        </article>
-
-
-        <article class="pricelist_type2">
-            <h2>standard plan</h2>
-            <p class="pricelist_prices_type2">95<sup>99</sup><br><span>pln/msc</span></p>
-            <ul>
-                <li>Zakup towaru + dowóz</li>
-                <li>Serwis</li>
-                <li>Gwarancja 5 lat</li>
-            </ul>
-        </article>
-
-        <article class="pricelist_type1">
-            <h2>advance plan</h2>
-            <p class="pricelist_prices">211<sup>00</sup><br><span>pln/msc</span></p>
-            <ul>
-                <li>Zakup towaru + dowóz</li>
-                <li>Serwis</li>
-                <li>Gwarancja 5 lat</li>
-                <li>Porady projektanta</li>
-            </ul>
-        </article>
-
-            <div>
-                <a href="#">Dołącz</a>
-                <a class="pricelist_type2" href="#">Dołącz</a>
-                <a href="#">Dołącz</a>
             </div>
-
-
-        </div>
-</div>
+    </div>
 
 <div class="clear"></div>
 
@@ -155,8 +204,6 @@
 
 
 
-
-</div>
 
 </body>
 </html>
