Added contact form section

--- a/index.html
+++ b/index.html
@@ -187,22 +187,44 @@
 
 <div class="clear"></div>
 
-<div class="contact_title">
-    <h2>Kontakt</h2>
+    <div class="contact">
+        <div class="content">
+            <div class="contact_title">
+                <h2>Kontakt</h2>
+            </div>
 
-    <!--form goes here-->
-</div>
+            <div class="contact-form">
+                <form>
+                    <div class="to-left">
+                        <input type="text" id="imie" placeholder="imie">
+                        <input type="text" id="nazwisko" placeholder="nazwisko">
+                        <textarea class="wiadomosc" placeholder="Wiadomosc"></textarea>
+                    </div>
+
+                    <div class="to-right">
+                        <img src="images/red_chair.png">
+                        <div class="checkbox">
+                            <input type="checkbox" id="agree">
+                            <label for="agree">Zgadzam się na przetwarzanie danych osobowych</label>
+                        </div>
+                        <input type="submit" value="wyslij">
+                    </div>
+
+                </form>
+
+
+            </div>
+        </div>
+    </div>
+
+<div class="clear"></div>
+
 
 
 <!-- REFERENCES -->
     <div class="references">
-        Icons made by <a href="http://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></div>
+        Icons made by <a href="http://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
     </div>
-
-
-
-
-
 
 
 </body>
