--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             </div>
     </div>
 
-<div class="clear"></div>
+    <div class="clear"></div>
 
     <div class="contact">
         <div class="content">
@@ -211,19 +211,26 @@
                     </div>
 
                 </form>
-
-
             </div>
         </div>
     </div>
 
-<div class="clear"></div>
+    <div class="clear"></div>
 
-
-
-<!-- REFERENCES -->
     <div class="references">
-        Icons made by <a href="http://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>             is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>
+        <div class="content references-content">
+                <ul class="references-items">
+                    <li class="references-copyright">
+                        <p>Icons made by <a href="http://www.flaticon.com/authors/google" title="Google">Google</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>                        is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a></p>
+                        <p>Copyright 2014 | All Rights Reserved - Sit On Chair</p>
+                    </li>
+                    <li class="references-item"><a href="http://www.flickr.com"><img src="images/flickr.png"></a></li>
+                    <li class="references-item"><a href="http://www.vimeo.com"><img src="images/vimeo.png"></a></li>
+                    <li class="references-item"><a href="http://www.pinterest.com"><img src="images/pinterest.png"></a></li>
+                    <li class="references-item"><a href="http://www.twitter.com"><img src="images/twitter.png"></a></li>
+                    <li class="references-logo"> <p>Sit <span>on</span> chair</p></li>
+                </ul>
+        </div>
     </div>
 
 
