Added an update to html main section. Updated function on mouseenter/mouseleave on articles' pictures.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
                     <article class="main_description">
                         <h1>Sit <span class="green">on </span> our <span class="green">chair</span></h1>
-                        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies.                                    Curabituret ligula. Ut molestie a, ultricies porta urna. </p>
+                        <p>Tekst 1. Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies.                              Curabituret ligula. Ut molestie a, ultricies porta urna. </p>
                         <p class="main_more"><a href="#">Zobacz więcej</a></p>
                     </article>
                 </li>
@@ -68,7 +68,7 @@
 
                     <article class="main_description">
                         <h1>Sit <span class="green">on </span> our <span class="green">chair</span></h1>
-                        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies.                                    Curabitur et ligula. Ut molestie a, ultricies porta urna. </p>
+                        <p>Tekst 2. Maecenas malesuada elit lectus felis, malesuada ultricies. Curabitur et ligula. Ut molestie a, ultricies porta urna. </p>
                         <p class="main_more"><a href="#">Zobacz więcej</a></p>
                     </article>
                 </li>
@@ -80,7 +80,7 @@
 
                     <article class="main_description">
                         <h1>Sit <span class="green">on </span> our <span class="green">chair</span></h1>
-                        <p>Lorem ipsum dolor sit amet enim. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies.                                    Curabitur et ligula. Ut molestie a, ultricies porta urna. </p>
+                        <p>Tekst 3. Etiam ullamcorper. Suspendisse a pellentesque dui, non felis. Maecenas malesuada elit lectus felis, malesuada ultricies.                                                                Curabitur et ligula. Ut molestie a, ultricies porta urna. </p>
                         <p class="main_more"><a href="#">Zobacz więcej</a></p>
                     </article>
                 </li>
@@ -98,15 +98,15 @@
     <div class="examples">
         <div class="content">
 
-            <article class="examples_pictures">
-                <img class="picture_chair" data-order="0" src="images/box1_img.jpg"/>
+            <article class="examples_pictures" data-order="0" >
+                <img class="picture_chair" src="images/box1_img.jpg"/>
                 <div class="examples_description">
                     <h3 class="examples_title">Chair CLAIR</h3>
                 </div>
             </article>
 
-            <article class="examples_pictures">
-                <img class="picture_chair" data-order="1" src="images/box2_img.jpg"/>
+            <article class="examples_pictures" data-order="1">
+                <img class="picture_chair" src="images/box2_img.jpg"/>
                 <div class="examples_description">
                     <h3 class="examples_title">Chair MARGARITA</h3>
                 </div>
