Added viewport to ensure proper display on mobile devices.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=1024px, initial-scale=1.0">
     <title>Online shop sample page</title>
     <!--<link rel="stylesheet" href="css/style.css">-->
     <link rel="stylesheet" href="css/scss/style2.css">
